# ai-sql-assistant

./: .env.example  Makefile  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/ai_core/: client.py  prompts.py  sql_guard.py
backend/app/api/: routes.py
backend/tests/: test_sql_guard.py
